--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,13 +1,13 @@
 <% layout('layout') -%>
 
-<form action="/login" method="post">
+<form action="/signup" method="post">
   <div>
     <label>Username:</label>
-    <input type="text" name="username"/><br/>
+    <input type="text" name="user[username]"/><br/>
   </div>
   <div>
     <label>Password:</label>
-      <input type="password" name="password"/>
+      <input type="password" name="user[password]"/>
   </div>
   <div>
     <input type="submit" value="Submit"/>
